<?xml version="1.0" encoding="UTF-8"?>
<!--
    Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.apache</groupId>
        <artifactId>apache</artifactId>
        <version>18</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>pulsar-io-sftp-connector</artifactId>
    <version>2.10.1-SNAPSHOT</version>
    <name>Pulsar Ecosystem :: IO Connector :: SFTP</name>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <java.version>8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <redirectTestOutputToFile>true</redirectTestOutputToFile>
        <spotbugs-annotations.version>4.2.2</spotbugs-annotations.version>
        <testRetryCount>0</testRetryCount>

        <!-- connector dependencies -->
        <jackson.version>2.13.2</jackson.version>
        <lombok.version>1.18.22</lombok.version>
        <pulsar.version>2.10.1.8</pulsar.version>
        <logback-classic.version>1.4.4</logback-classic.version>
        <commons-lang3.version>3.11</commons-lang3.version>
        <commons-io.version>2.8.0</commons-io.version>
        <commons-codec.version>1.15</commons-codec.version>
        <jsch.version>0.1.55</jsch.version>
        <hadoop-client.version>3.3.1</hadoop-client.version>
        <parquet-avro.version>1.12.3</parquet-avro.version>
        <fastjson.version>2.0.16</fastjson.version>
        <!-- test dependencies -->
        <netty-transport.version>4.1.74.Final</netty-transport.version>
        <protobuf-java.version>3.21.9</protobuf-java.version>
        <testng.version>7.3.0</testng.version>
        <awaitility.version>4.0.3</awaitility.version>
        <mockito.version>3.12.4</mockito.version>

        <!-- build plugin dependencies -->
        <license.plugin.version>3.0</license.plugin.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <surefire.version>3.0.0-M3</surefire.version>
        <nifi.nar.plugin.version>1.2.0</nifi.nar.plugin.version>
        <puppycrawl.checkstyle.version>8.37</puppycrawl.checkstyle.version>
        <spotbugs-maven-plugin.version>4.2.2</spotbugs-maven-plugin.version>
        <cloudPkgSuffix></cloudPkgSuffix>
    </properties>


    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>io.streamnative</groupId>
            <artifactId>pulsar-io-core</artifactId>
            <version>${pulsar.version}</version>
        </dependency>

        <dependency>
            <groupId>io.streamnative</groupId>
            <artifactId>pulsar-common</artifactId>
            <version>${pulsar.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>${jsch.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
            <version>${hadoop-client.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.parquet</groupId>
            <artifactId>parquet-avro</artifactId>
            <version>${parquet-avro.version}</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>

        <dependency>
            <groupId>io.streamnative</groupId>
            <artifactId>pulsar-functions-local-runner-original</artifactId>
            <version>${pulsar.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>io.grpc</groupId>
                    <artifactId>grpc-all</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.grpc</groupId>
                    <artifactId>grpc-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.grpc</groupId>
                    <artifactId>grpc-testing</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.grpc</groupId>
                    <artifactId>grpc-auth</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport</artifactId>
            <version>${netty-transport.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${protobuf-java.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}${cloudPkgSuffix}</finalName>
        <pluginManagement>
            <plugins>
                <!-- compile -->
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <compilerArg>-Xlint:deprecation</compilerArg>
                            <compilerArg>-Xlint:unchecked</compilerArg>
                            <!-- https://issues.apache.org/jira/browse/MCOMPILER-205 -->
                            <compilerArg>-Xpkginfo:always</compilerArg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <!-- test -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <redirectTestOutputToFile>${redirectTestOutputToFile}</redirectTestOutputToFile>
                        <reuseForks>false</reuseForks>
                        <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
                        <rerunFailingTestsCount>${testRetryCount}</rerunFailingTestsCount>
                        <argLine>
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                            --add-opens java.base/java.nio=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
                <!-- package -->
                <plugin>
                    <groupId>org.apache.nifi</groupId>
                    <artifactId>nifi-nar-maven-plugin</artifactId>
                    <version>${nifi.nar.plugin.version}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <finalName>${project.artifactId}-${project.version}${cloudPkgSuffix}</finalName>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-nar</id>
                            <phase>package</phase>
                            <goals>
                                <goal>nar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- license -->
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>${license.plugin.version}</version>
                    <configuration>
                        <header>src/license/ALv2/header.txt</header>
                        <excludes>
                            <exclude>LICENSE</exclude>
                            <exclude>NOTICE</exclude>
                            <exclude>**/*.xml</exclude>
                            <exclude>.github/CODEOWNERS</exclude>
                            <exclude>{project.basedir}/src/test/java/resources/external/*</exclude>
                            <exclude>.github/workflows/*.yml</exclude>
                            <exclude>data/**</exclude>
                        </excludes>
                        <mapping>
                            <proto>JAVADOC_STYLE</proto>
                            <conf>SCRIPT_STYLE</conf>
                            <ini>SCRIPT_STYLE</ini>
                            <yaml>SCRIPT_STYLE</yaml>
                            <cfg>SCRIPT_STYLE</cfg>
                            <md>XML_STYLE</md>
                            <txt>SCRIPT_STYLE</txt>
                        </mapping>
                    </configuration>
                    <executions>
                        <execution>
                            <id>check-license-header</id>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <phase>process-sources</phase>
                        </execution>
                    </executions>
                </plugin>
                <!-- checkstyle -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven-checkstyle-plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${puppycrawl.checkstyle.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <configLocation>src/checkstyle/checkstyle.xml</configLocation>
                        <suppressionsLocation>src/checkstyle/suppressions.xml</suppressionsLocation>
                        <encoding>UTF-8</encoding>
                        <consoleOutput>true</consoleOutput>
                        <failOnViolation>true</failOnViolation>
                        <includeResources>false</includeResources>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    </configuration>
                    <executions>
                        <execution>
                            <id>checkstyle</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- spotbugs -->
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs-maven-plugin.version}</version>
                    <configuration>
                        <excludeFilterFile>${session.executionRootDirectory}/src/spotbugs/findbugsExclude.xml</excludeFilterFile>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>

            <!-- test -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>

            <!-- package -->
            <plugin>
                <groupId>org.apache.nifi</groupId>
                <artifactId>nifi-nar-maven-plugin</artifactId>
            </plugin>

            <!-- license -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
            </plugin>

            <!-- checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>

            <!-- spotbugs -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>